fixed some layout issues with the nav and header section

--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,7 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-  padding-top: 10%;
+  padding-top: 7%;
 }
 @media (max-width: 500px) {
   .container {
@@ -175,6 +175,9 @@ nav {
   width: 100%;
   margin: 0 auto;
   background-color: rgba(246, 246, 246, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 500px) {
   nav {
@@ -185,7 +188,7 @@ nav {
   }
 }
 nav .nav-container {
-  width: 100%;
+  width: 49%;
   text-align: center;
 }
 @media (max-width: 500px) {
@@ -225,7 +228,7 @@ footer {
   align-items: center;
 }
 .home .intro img {
-  border-radius: 20px;
+  border-radius: 10px;
   max-width: 100%;
 }
 @media (max-width: 500px) {
@@ -328,22 +331,16 @@ footer {
   border-radius: 10px;
   color: white;
 }
+.home .walk .walk-text .btn button:hover {
+  background-color: white;
+  color: #23293B;
+}
 @media (max-width: 500px) {
   .home .walk .walk-text .btn button {
     width: 100%;
     height: 50px;
     border-radius: 0px;
   }
-}
-.home .walk .walk-text .btn button:hover {
-  display: block;
-  background-color: white;
-  cursor: pointer;
-  width: 125px;
-  height: 45px;
-  font-size: 2rem;
-  border-radius: 10px;
-  color: #23293B;
 }
 .home .walk .walk-img {
   width: 46%;
