--- a/less/global.less
+++ b/less/global.less
@@ -34,7 +34,7 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
-  padding-top: 10%;
+  padding-top: 7%;
 
   @media @mobile {
     padding-top: 20%;
