--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,7 +4,7 @@
 
   .intro {
     img{
-      border-radius: 20px;
+      border-radius: 10px;
       max-width: 100%;
       @media @mobile {
         border-radius: 10px;
@@ -104,9 +104,7 @@
             border-radius: 0px;
           }
         }
-        button:hover{
-          .custom-btn(white, 125px, @header-font-color);
-        }
+        
         .flexBox(flex-start, center, row);
         
       }
