--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,6 +14,11 @@
     font-size: 2rem;
     border-radius: 10px;
     color:@txt-color;
+    
+    &:hover{
+        background-color: @txt-color;
+        color: @bg-color;
+    }
 }
 
 .flexBox(@j, @a, @d){
