--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,13 +9,14 @@ nav{
     width: 100%;
     margin: 0 auto; 
     background-color: @nav-bg;
+    .center();
 
     @media @mobile {
         .flexBox(center, center, column);
     }
 
     .nav-container{
-        width: 100%;
+        width: 49%;
         text-align: center;
         @media @mobile {
             width: 80%;
